--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -8,6 +8,7 @@
   }
 }
 /* KU theme colors for jQuery MMenu */
+
 #mobileleftmenu {
   background-color: @white-color;
   color: @text-color;
@@ -48,10 +49,7 @@
       background: @teol;
       border-top: 1px solid darken(@teol, 5%);
     }
-    // .mm-next::after {
-    //   // Arrows
-    //   color: @white-color;
-    // }
+
     &.mm-selected > a:not(.mm-next) {
       // selected view
       font-weight: 600;
@@ -84,7 +82,7 @@
 
     > .mm-panel {
       background-color: lighten(@gray-light, 40%);
-      color: @gray-dark;
+      color: @text-color;
     }
 
     &::after {
@@ -145,28 +143,26 @@
     border: none;
     box-shadow: none;
   }
-
-
   // Mmenu overrides
   .mm-panels {
     top: 45px!important;
   }
-
   // Use KU Arrows
-  .mm-listview  li {
+  .mm-listview li {
     .mm-next {
       &::after {
         .icon;
         content: @icon-arrow;
-        color: @gray-dark;
+        color: @text-color;
         border: 0;
         transform: rotate(0);
         right: 20px;
       }
     }
 
+    // Opened
     &.mm-opened {
-      >.mm-next {
+      > .mm-next {
         &::after {
           transform: rotate(90deg);
         }
@@ -174,14 +170,15 @@
 
       // Sublevels
       .mm-listview {
-        >.mm-next {
+        > .mm-next {
           &::after {
             transform: rotate(0);
           }
         }
 
+        // Opened
         .mm-opened {
-          >.mm-next {
+          > .mm-next {
             &::after {
               transform: rotate(90deg);
             }
@@ -191,16 +188,16 @@
     }
   }
 
-.mm-listview {
-  >.local1_mmenu,
-  >.local2_mmenu {
-    >.mm-next {
-      &::after {
-        color: @white-color;
+  .mm-listview {
+    > .local2_mmenu,
+    > .local1_mmenu {
+      > .mm-next {
+        &::after {
+          color: @white-color;
+        }
       }
     }
   }
-}
 
   .search-placeholder {
     padding: 5px;
