Mobile menu theming

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -145,7 +145,7 @@
   }
   // Mmenu overrides
   .mm-panels {
-    top: 45px!important;
+    top: 45px;
   }
   // Use KU Arrows
   .mm-listview li {
@@ -200,7 +200,7 @@
   }
 
   .search-placeholder {
-    padding: 5px;
+    padding: 5px 15px 5px 5px;
     background-color: @gray-lighter;
 
     .dropdown-menu {
