--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -332,6 +332,7 @@
     top: 0;
     right: 0;
     z-index: 1040;
+    margin-right: 10px;
     padding: 7px 10px;
     background-color: @gray-light;
 
