Tiny editor overrides

--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -11,7 +11,7 @@
     padding-top: 20px;
     margin: 0;
     position: relative;
-    font-size: 20px;
+    font-size: 12px;
     font-weight: 700;
 
     &::before {
@@ -30,6 +30,10 @@
       width: 100%;
       clear: both;
       float: none;
+    }
+    footer {
+      font-weight: normal;
+      font-size: 0.9em;
     }
   }
 }
