--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -37,4 +37,58 @@
       font-size: 0.9em;
     }
   }
+  #content ul.advanced_list {
+  margin: 0;
+  padding: 0;
+}
+
+#content ul.advanced_list div {
+  width: 255px;
+  font-size: 1em;
+  letter-spacing: 0.02em;
+  line-height: 14px;
+  background-color: #f5f5f5;
+  padding: 5px 5px 5px 10px;
+  position: relative;
+  /*min-height: 80px;*/
+  height: 100%;
+  box-sizing: border-box;
+}
+
+#content ul.full_link li:hover div {
+  background-color: #e7e6e6;
+}
+
+#content ul.full_link div:hover {
+  background-color: transparent;
+}
+
+#content ul.advanced_list p {
+  margin: 0;
+  padding: 0;
+  line-height: 13px;
+}
+
+#content ul.advanced_list li {
+  list-style-type: none;
+  background: right no-repeat #f5f5f5;
+  margin-bottom: 8px;
+  padding: 0;
+  /*min-height: 80px;*/
+  position: relative;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+#content ul.advanced_list h2 {
+  font-size: 1em;
+  letter-spacing: 0.6px;
+  font-weight: 700;
+  margin: 0 0 4px 0;
+  padding: 0;
+}
+
+#content ul.advanced_list h2 a, #content ul.advanced_list h2 a:visited {
+  color: #252525;
+}
 }
