--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -36,12 +36,12 @@
     }
   }
 
-  #content ul.advanced_list {
+   ul.advanced_list {
     margin: 0;
     padding: 0;
   }
 
-  #content ul.advanced_list div {
+   ul.advanced_list div {
     width: 255px;
     font-size: 1em;
     letter-spacing: 0.02em;
@@ -56,10 +56,6 @@
 
   ul.full_link li:hover div {
     background-color: #e7e6e6;
-  }
-
-  ul.full_link div:hover {
-    background-color: transparent;
   }
 
   ul.advanced_list p {
