--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -5,6 +5,7 @@
 // Old blockquotes inside TinyMCE
 .mce-content-body {
   blockquote {
+    float: right;
     border-top: 1px solid #901a1e;
     padding-top: 20px;
     margin: 0;
