--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow: hidden;
   border-bottom: 1px solid @ku-entry-border;
   padding-top: 1px;
   border-top: 1px solid @ku-red;
