--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -91,7 +91,7 @@
   }
   /* Tables are always outlined in editor */
 
-  .table {
+  table {
     border: 1px solid @table-border-color;
     > thead,
     > tbody,
