--- a/less/variables.less
+++ b/less/variables.less
@@ -565,7 +565,7 @@
 @nav-link-hover-bg:                         @gray-lighter;
 @nav-link-border-radius:                   @border-radius-base;
 
-@nav-disabled-link-color:                   grey-999;
+@nav-disabled-link-color:                   @gray-999;
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
