--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -37,13 +37,17 @@
 
 .figure, figure {
   // Ensures the caption's text aligns with the image.
-  display: inline-block;
+  display: table;
   clear: both;
+
+  &.image {
+    // Makes figcaption fit image width
+    width: 1px;
+  }
 
   &.pull-left, &.align-left {
     @media (min-width: @screen-sm) {
       margin-right: @margin10;
-      width: 45%;
       float: left;
     }
   }
@@ -51,13 +55,14 @@
   &.pull-right, &.align-right {
     @media (min-width: @screen-sm) {
       margin-left: @margin10;
-      width: 45%;
       float: right;
     }
   }
 
   img {
-    .img-responsive();
+    float: none;
+    max-width: none!important;
+    height: auto;
   }
   @media (max-width: @screen-xs-max) {
     width: 100%;
@@ -87,4 +92,5 @@ img {
   color: @gray-light;
   border-bottom: 1px solid @figure-caption-border-color;
   padding-bottom: 10px;
+  width: 100%;
 }
