--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -267,9 +267,11 @@
         // }
         -ms-interpolation-mode: bicubic;
         position: absolute;
-        top: 50%;
+        // top: 50%;
+        top: 0;
         left: 50%;
-        transform: translateY(-50%) translateX(-50%);
+        // transform: translateY(-50%) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
       }
     }
     // Position image left
