--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -51,7 +51,7 @@
     background-color: #f5f5f5;
     padding: 5px 5px 5px 10px;
     position: relative;
-    /*min-height: 80px;*/
+    // min-height: 80px;
     height: 100%;
     box-sizing: border-box;
   }
@@ -71,7 +71,7 @@
     background: right no-repeat #f5f5f5;
     margin-bottom: 8px;
     padding: 0;
-    /*min-height: 80px;*/
+    // min-height: 80px;
     position: relative;
     height: 100%;
     box-sizing: border-box;
@@ -89,7 +89,7 @@
   ul.advanced_list h2 a:visited {
     color: #252525;
   }
-  /* Tables are always outlined in editor */
+  // Tables are always outlined in editor
 
   table {
     border: 1px solid @table-border-color;
