--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -271,14 +271,16 @@
         top: 0;
         left: 50%;
         // transform: translateY(-50%) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%) translate3d(0,0,0);
+        filter: blur(0);
+        image-rendering: -webkit-optimize-contrast
       }
     }
     // Position image left
     &.img-left {
       img {
         left: 0;
-        transform: translateY(-50%) translateX(0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
     // Position image right
@@ -286,7 +288,7 @@
       img {
         left: auto;
         right: 0;
-        transform: translateY(-50%) translateX(0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
   }
