--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -273,7 +273,7 @@
         // transform: translateY(-50%) translateX(-50%);
         transform: translateY(0) translateX(-50%) translate3d(0,0,0);
         filter: blur(0);
-        image-rendering: -webkit-optimize-contrast
+        image-rendering: -webkit-optimize-contrast;
       }
     }
     // Position image left
