--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -284,9 +284,11 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translateY(-50%) translateX(-50%);
+        transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
         // Prevent image from moving in some cases
         backface-visibility: hidden;
+        filter: blur(0);
+        image-rendering: -webkit-optimize-contrast;
         //filter: brightness(100%);
       }
     }
@@ -294,7 +296,7 @@
     &.img-left {
       img {
         left: 0;
-        transform: translateY(-50%) translateX(0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
     // Position image right
@@ -302,7 +304,7 @@
       img {
         left: auto;
         right: 0;
-        transform: translateY(-50%) translateX(0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
   }
