Updated Jekyll templates

--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -8,8 +8,8 @@
   <h2 id="examples-framework">Using the framework</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/ku-default/">
-        <img src="{% if site.github %}{{ site.baseurl }}{% else %}..{% endif %}/examples/screenshots/ku_standard.png" alt="KU templates">
+      <a class="thumbnail" href="{{ site.baseurl }}/examples/ku-default/">
+        <img src="{{ site.baseurl }}/examples/screenshots/ku_standard.png" alt="KU templates">
       </a>
       <h3>KU layout templates</h3>
       <p>Templates for University of Copenhagen.</p>
