--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -109,30 +109,26 @@
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
-<script src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
-{% if page.slug != "examples" %}
-<!-- Documentation extra - not for production -->
+{% else %}
+<script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
 <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
-<!-- //Documentation extra - not for production -->
-<script src="{{ site.baseurl }}/assets/js/ku-mobile-menu.js"></script>
-{% endif %}
-{% if page.slug == "examples" %}
-<script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+ {% endif %}
+   {% if page.slug == "examples" %}
+   <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
+   <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
+   {% endif %}
+  {% if page.slug != "examples" %}
+  <!-- Documentation extra - not for production -->
+  <script src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
+  <!-- //Documentation extra - not for production -->
+  <script src="{{ site.baseurl }}/assets/js/ku-mobile-menu.js"></script>
+  {% endif %}
+  {% if page.category == "kurser" %}
+  <!-- Kurser.ku.dk -->
+  <script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script>
+  {% endif %}
 <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
-{% endif %} {% if page.category == "kurser" %}
-<!-- Kurser.ku.dk -->
-<script src="../../assets/js/kurser.ku.dk/kurser.min.js"></script>
-{% endif %} {% else %}
-<script src="../../dist/js/bootstrap.js"></script>
-<script src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
-<script src="../../custom/ku-mobile-menu.js"></script>
-<script src="../../assets/js/ku-global-search/search.js"></script>
-<script src="../../assets/js/docs.min.js"></script>
-{% if page.category == "kurser" %}
-<!-- Kurser.ku.dk -->
-<script src="../../assets/js/kurser.ku.dk/kurser.js"></script>
-{% endif %} {% endif %}
-
+<script src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
 <script>
   // Only use under development - set active left menu item
   $(function() {
