--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -24,7 +24,7 @@
           <a href="{{ site.baseurl }}/javascript{% if site.github %}.html{% endif %}">JavaScript</a>
         </li>
         <li{% if page.slug=="examples" %} class="active" {% endif %}>
-        <a href="{{ site.baseurl }}/examples/ku-default{% if site.github %}.html{% endif %}">KU templates</a>
+        <a href="{{ site.baseurl }}/examples/ku-default/">KU templates</a>
         </li>
       </ul>
     </nav>
