--- a/docs/assets/css/slider/slick.css
+++ b/docs/assets/css/slider/slick.css
@@ -87,6 +87,12 @@
   display: block;
   max-width: 100%;
   height: auto;
+  image-rendering: -webkit-optimize-contrast;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.slick-slide:hover img {
+  -webkit-backface-visibility: hidden;
 }
 .slick-slide.slick-loading img {
   display: none;
