--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -39,7 +39,7 @@
         <div class="col-xs-3 footercolumn">
           <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
           <ul class="footerlinks" role="menu">
-            <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
+            <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a><span class="icon icon-padlock"></span></li>
           </ul>
           <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
           <ul class="footerlinks" role="menu">
