--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -136,16 +136,16 @@
         }
       }
 
-      .padlock::after {
-        .icon;
-        content: @icon-padlock;
-        position: relative;
-        top: 0;
-        font-size: 15px;
-        color: @white-color;
-        margin-left: 5px;
-        position: relative;
-      }
+      // .padlock::after {
+      //   .icon;
+      //   content: @icon-padlock;
+      //   position: relative;
+      //   top: 0;
+      //   font-size: 15px;
+      //   color: @white-color;
+      //   margin-left: 5px;
+      //   position: relative;
+      // }
     }
   }
 }
