--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -66,7 +66,7 @@
 @import "ku-news.less";
 @import "ku-media.less";
 @import "ku-entries.less";
-//@import "ku-slickslider.less";
+@import "ku-slickslider.less";
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
 //@import "ku-gridboxes-bootstrap.less";
