--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -270,8 +270,8 @@
         top: 50%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
-        filter: blur(0);
-        image-rendering: -webkit-optimize-contrast;
+        // filter: blur(0);
+        // image-rendering: -webkit-optimize-contrast;
       }
     }
     // Position image left
