--- a/less/mixins/ku-gridbox-mixins.less
+++ b/less/mixins/ku-gridbox-mixins.less
@@ -98,7 +98,7 @@
 .img-text-aligned() {
   &.size1 {
     .box2 {
-      flex: 0 1 @gridbox2!important;
+      flex: 0 1 @gridbox2;
       //Fix for iframe centering in .size1 boxes
       iframe {
         position: absolute;
