--- a/less/utilities.less
+++ b/less/utilities.less
@@ -32,10 +32,10 @@
 
 // Note: Deprecated .hide in favor of .hidden or .sr-only (as appropriate) in v3.0.1
 .hide {
-  display: none !important;
+  display: none; //!important;
 }
 .show {
-  display: block !important;
+  display: block; //!important;
 }
 .invisible {
   visibility: hidden;
