--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -920,6 +920,9 @@
           .box2 {
             order: 2;
             flex: 0 0 50%;
+            img {
+              max-width: none;
+            }
           }
         }
       }
