--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -47,13 +47,13 @@ nav {
       margin-top: @grid-gutter-height;
     }
   }
-  @media (max-width: @screen-md-min) {
-    [class*="col-"] {
-      + [class*="col-"] {
-        margin-top: @grid-gutter-height;
-      }
-    }
-  }
+  // @media (max-width: @screen-md-min) {
+  //   [class*="col-"] {
+  //     + [class*="col-"] {
+  //       margin-top: @grid-gutter-height;
+  //     }
+  //   }
+  // }
 }
 
 #gridsidebar {
