--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -140,9 +140,9 @@
   display: none;
 }
 
-.slick-dotted.slick-slider {
-  margin-bottom: 30px;
-}
+// .slick-dotted.slick-slider {
+//   margin-bottom: 30px;
+// }
 // Arrows
 
 .slick-arrow {
@@ -248,7 +248,7 @@
 
 .slick-dots {
   position: absolute;
-  bottom: -25px;
+  bottom: 10px;
   display: block;
   width: 100%;
   padding: 0;
@@ -259,8 +259,8 @@
   li {
     position: relative;
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     margin: 0 5px;
     padding: 0;
     cursor: pointer;
@@ -271,8 +271,8 @@
       font-size: 0;
       line-height: 0;
       display: block;
-      width: 20px;
-      height: 20px;
+      width: 100%;
+      height: 100%;
       padding: 5px;
       cursor: pointer;
       color: transparent;
