--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -52,7 +52,6 @@
       &.with-img {
         &:hover {
           background: @ku-gray-hover;
-          border: 1px solid @ku-gray-hover;
         }
       }
     }
@@ -261,24 +260,23 @@
         // Img inside the box adjusted by height and centered
         display: block;
         min-height: 100%;
-        min-width: 100%;
-        // @media (max-width: @screen-xs-min) {
-        //   object-fit: cover;
-        // }
+        // min-width: 100%;
         -ms-interpolation-mode: bicubic;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
-        // filter: blur(0);
-        // image-rendering: -webkit-optimize-contrast;
+        // top: 50%;
+        // left: 50%;
+        // transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
+        transform: translate3d(0,0,0);
+        backface-visibility: hidden;
+        filter: brightness(100%) blur(0);
+        //image-rendering: -webkit-optimize-contrast;
       }
     }
     // Position image left
     &.img-left {
       img {
         left: 0;
-        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
+        //transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
     // Position image right
@@ -286,7 +284,7 @@
       img {
         left: auto;
         right: 0;
-        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
+        //transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
   }
@@ -510,29 +508,9 @@
     }
   }
 }
-
-.boxlink {
-  color: inherit!important;
-  display: block;
-
-  &:active,
-  &:focus,
-  &:hover {
-    text-decoration: none;
-
-    .gridbox {
-      img {
-        filter: brightness(90%);
-        // Prevent image from moving when using the filter above:
-        -webkit-backface-visibility: hidden;
-      }
-    }
-  }
-}
 /*
 * Mobile: All column types must behave like single column boxes
 */
-
 .gcrow .gccolumn .gridbox {
   .all-single-column();
 
@@ -825,8 +803,9 @@
       &.with-img {
         .box2 {
           img {
-            object-fit: unset;
-            max-height: none;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
           }
         }
       }
@@ -920,6 +899,7 @@
           .box2 {
             order: 2;
             flex: 0 0 50%;
+
             img {
               max-width: none;
             }
@@ -962,6 +942,21 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+.boxlink {
+  color: inherit!important;
+  display: block;
+
+  &:hover {
+    text-decoration: none;
+
+    .gridbox {
+      img {
+        filter: brightness(90%) blur(0);
       }
     }
   }
