--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -52,7 +52,7 @@
   <link href="{{ site.baseurl }}/assets/css/kurser.ku.dk/kurser.css" rel="stylesheet">
   {% endif %}
   {% if page.category == "gridbox" %}
-  <link href="{{ site.baseurl }}../../dist/css/faculties/faelles.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/dist/css/faculties/faelles.css" rel="stylesheet">
   {% endif %}
   {% if page.category == "non-responsive" %}
   <link href="{{ site.baseurl }}/assets/css/non-responsive/non-responsive.css" rel="stylesheet">
