--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -5,6 +5,14 @@
 // Old blockquotes inside TinyMCE
 
 .mce-content-body {
+  &#content {
+    text-align: left;
+    margin: 0;
+    padding: 5px;
+    width: 100%;
+    max-width: none;
+    background-color: @white-color;
+}
   blockquote {
     float: right;
     border-top: 1px solid #901a1e;
