--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -263,7 +263,7 @@
         // min-width: 100%;
         -ms-interpolation-mode: bicubic;
         position: absolute;
-        // top: 50%;
+        top: 0;
         left: 50%;
         // transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
         transform: translateX(-50%) translate3d(0,0,0);
