--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -38,7 +38,7 @@ nav {
 
 .main-content {
   padding-top: @grid-gutter-height;
-  @media (max-width: @screen-sm-min) {
+  @media (max-width: @screen-xs-max) {
     padding-bottom: @grid-gutter-height;
   }
 
@@ -47,13 +47,13 @@ nav {
       margin-top: @grid-gutter-height;
     }
   }
-  // @media (max-width: @screen-md-min) {
-  //   [class*="col-"] {
-  //     + [class*="col-"] {
-  //       margin-top: @grid-gutter-height;
-  //     }
-  //   }
-  // }
+  @media (max-width: @screen-xs-max) {
+    [class*="col-"] {
+      + [class*="col-"] {
+        margin-top: @grid-gutter-height;
+      }
+    }
+  }
 }
 
 #gridsidebar {
@@ -66,7 +66,7 @@ nav {
 
 .main-area {
   flex-grow: 1;
-  @media (max-width: @screen-sm-min) {
+  @media (max-width: @screen-xs-max) {
     padding-left: (@grid-gutter-width / 2);
     padding-right: (@grid-gutter-width / 2);
   }
@@ -89,7 +89,7 @@ nav {
 .gcitem + .gcitem {
   margin-top: @grid-gutter-height;
 }
-@media (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
+@media (min-width: @screen-xs-min) and (max-width: @screen-xs-max) {
   .GridForside {
     // Double columns must span 100% in tablet view (but not the full-width template - hence this hack.)
     .double-column .col-sm-6 {
