--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1805,6 +1805,13 @@
   }
 }
 
+.icon-arrow-back {
+  &:before {
+    content: @icon-arrow;
+    transform: rotate(180deg) translate3d(0,0,0);
+  }
+}
+
 .icon-quote {
   &:before {
     content: @icon-quote;
