--- a/less/navbar.less
+++ b/less/navbar.less
@@ -883,12 +883,12 @@
       background-image: url("https://bootstrap.secure.ku.dk/img/toplogo_uk.svg");
       width: 75%;
       left: @margin20;
-      @media (min-width: @screen-xs-max) {
-        width: 60%;
-      }
-      @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        width: 36%;
-      }
+      // @media (min-width: @screen-xs-max) {
+      //   width: 60%;
+      // }
+      // @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+      //   width: 36%;
+      // }
       @media (min-width: @screen-md-min) {
         width: 28%;
       }
