--- a/docs/assets/css/doctypes/fullwidthfrontpage.css
+++ b/docs/assets/css/doctypes/fullwidthfrontpage.css
@@ -1,14 +1,20 @@
 /* Front page styling */
+
 .ku-branding-text-major, .ku-branding-text-sub {
   display: none;
 }
+
 .ku-branding .ku-branding-text {
   background: url('https://bootstrap.secure.ku.dk/img/ku_header_2_lin_dk.svg') 5px 66% no-repeat;
   background-size: 75%;
   height: 100%;
   width: 50%;
   left: 70px;
-  bottom: 4px;
+  bottom: 0;
+}
+
+html:lang(en) .ku-branding .ku-branding-text {
+  background: url('https://bootstrap.secure.ku.dk/img/ku_header_2_lin_en.svg') 5px 66% no-repeat;
 }
 
 @media (min-width: 768px) {
@@ -20,6 +26,9 @@
     width: 38%;
     bottom: 7px;
   }
+  html:lang(en) .ku-branding .ku-branding-text {
+    background: url('https://bootstrap.secure.ku.dk/img/ku_header_en.svg') left 72% no-repeat;
+  }
 }
 
 .main-content {
@@ -28,7 +37,7 @@
 }
 
 .topbar-logo {
-  display: none!important;
+  display: none !important;
 }
 
 .breadcrumbs, .local-footer {
@@ -45,7 +54,7 @@
 }
 
 .jumpboard .jumpcolumn {
-  margin-bottom: 0!important;
+  margin-bottom: 0 !important;
   max-height: 160px;
   border-right: 1px solid #fff;
   padding-left: 23px;
@@ -65,7 +74,7 @@
 }
 
 .jumpboard .jumpcolumn .jumpheading a {
-  color: inherit!important;
+  color: inherit !important;
 }
 
 .jumpboard .jumpcolumn .jumpheading:after {
@@ -175,7 +184,7 @@
   .jumpboard .jumpcolumn .jumpheading {
     border-bottom: 1px solid #ccc;
     background: #eee;
-    font-size: 1.5em!important;
+    font-size: 1.5em !important;
     font-weight: bold;
     margin: 0;
     padding: 7px 35px 10px 20px;
