Social box headings

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -69,6 +69,7 @@
 @import "ku-slickslider.less";
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
+@import "ku-social-boxtop.less";
 //@import "ku-gridboxes-bootstrap.less";
 @import "ku-misc.less";
 @import "ku-editor-overrides.less";
