--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1685,7 +1685,7 @@
   }
 
   &:hover {
-    background-color: #3e5a98;
+    background-color: @ku-facebook;
   }
 }
 
@@ -1695,7 +1695,7 @@
   }
 
   &:hover {
-    background-color: #f7ba20;
+    background-color: @ku-futurity;
   }
 }
 
@@ -1715,7 +1715,7 @@
   }
 
   &:hover {
-    background-color: #2ca8df;
+    background-color: @ku-twitter;
   }
 }
 
@@ -1765,7 +1765,7 @@
   }
 
   &:hover {
-    background-color: #d7352a;
+    background-color: @ku-conversation;
   }
 }
 
