--- a/less/variables.less
+++ b/less/variables.less
@@ -122,6 +122,13 @@
 @jura-sub_4: #a3650c;
 @jura-sub_4-hover: #8f570a;
 
+// Social media colors
+
+@ku-twitter:            #1da1f2;
+@ku-facebook:           #4267b2;
+@ku-futurity:           #ffa64d;
+@ku-conversation:       #d20b17;
+
 // KU gradients
 
 @ku-entry-start:        #f3f3f1;
