--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -807,6 +807,12 @@
   .double-column [class*=column] {
     .gridbox {
       &.with-img {
+        .box1 {
+          padding-top: 0;
+        }
+        .header {
+          padding-top: 5px;
+        }
         .box2 {
           img {
             min-width: 100%;
