News search bar

--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -119,7 +119,7 @@
 // Search news forms
 
 .search-news {
-  padding: 7px 15px;
+  padding: 7px 15px!important;
   form {
     display: flex;
     @media only screen and (min-width: @screen-sm-max) {
