--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -807,12 +807,6 @@
   .double-column [class*=column] {
     .gridbox {
       &.with-img {
-        .box1 {
-          padding-top: 0;
-        }
-        .header {
-          padding-top: 5px;
-        }
         .box2 {
           img {
             min-width: 100%;
@@ -831,9 +825,11 @@
       background: @white-color;
 
       &.with-img {
+        .header {
+          padding-top: 5px;
+        }
         .box1 {
-          padding-left: 24px;
-          padding-right: 0;
+          padding: 0 24px 10px 0;
           flex: 0 1 51.6%;
           max-width: 390px; // preventing that too much text will expand this box
           order: 2;
