--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -826,10 +826,10 @@
 
       &.with-img {
         .header {
-          padding-top: 5px;
+          margin-top: 5px;
         }
         .box1 {
-          padding: 0 24px 10px 0;
+          padding: 0 24px 10px 15px;
           flex: 0 1 51.6%;
           max-width: 390px; // preventing that too much text will expand this box
           order: 2;
