--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -116,14 +116,17 @@
   margin-top: 0;
 }
 
+.readAll {
+  margin-bottom: 0;
+}
 // Search news forms
 
 .search-news {
-  padding: 7px 15px!important;
+  padding: 5px 15px!important;
   form {
     display: flex;
     @media only screen and (min-width: @screen-sm-max) {
-      height: 29px;
+      height: 30px;
     }
   }
 
@@ -138,7 +141,7 @@
     flex: 0 0 auto;
     @media only screen and (min-width: @screen-sm-max) {
       height: 100%;
-      padding-top: 3px;
+      padding-top: 4px;
     }
   }
 }
