Moving style to doctype

--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -92,23 +92,17 @@ nav {
     margin-top: @grid-gutter-height;
   }
 }
-@media (min-width: @screen-xs-min) and (max-width: @screen-xs-max) {
+
+@media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
   .gccolumn {
     &[class^="col-"][class$="-12"] {
       // Stacking full width columns i tablet view
       margin-top: @grid-gutter-height;
     }
   }
-
-  .GridForside {
-    // Double columns must span 100% in tablet view (but not the full-width template - hence this hack.)
-    .double-column .col-sm-6 {
-      width: 100%;
-    }
-  }
 }
 
-.ingle-column .column1,
+.single-column .column1,
 .rightbox {
   blockquote {
     width: 100%!important;
