--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -259,16 +259,16 @@
       img {
         // Img inside the box adjusted by height and centered
         display: block;
-        min-height: 100%;
+        max-height: 100%;
         // min-width: 100%;
+        max-width: none;
         -ms-interpolation-mode: bicubic;
         object-fit: cover;
         position: absolute;
-        top: 0;
-        //left: 50%;
-        bottom: 0;
-        // transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
-        transform: translate3d(0,0,0);
+        top: 50%;
+        left: 50%;
+        //bottom: 0;
+        transform: translateY(-50%) translateX(-50%) translate3d(0,0,0);
         backface-visibility: hidden;
         filter: brightness(100%) blur(0);
         //image-rendering: -webkit-optimize-contrast;
