--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -120,3 +120,18 @@
     }
   }
 }
+
+// Flexible box dialog
+
+#gridcontent-dialog-edit-flexiblebox {
+  .image-alignment-picker {
+    .radio {
+      &:first-child {
+        .control-label {
+          padding-left: 0;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
