--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -278,7 +278,7 @@
     &.img-left {
       img {
         left: 0;
-        transform: translateX(0) translate3d(0,0,0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
     // Position image right
@@ -286,7 +286,7 @@
       img {
         left: auto;
         right: 0;
-        transform: translateX(0) translate3d(0,0,0);
+        transform: translateY(-50%) translateX(0) translate3d(0,0,0);
       }
     }
   }
