--- a/less/variables.less
+++ b/less/variables.less
@@ -127,7 +127,7 @@
 @ku-twitter:            #1da1f2;
 @ku-facebook:           #4267b2;
 @ku-futurity:           #ffa64d;
-@ku-conversation:       #d20b17;
+@ku-conversation:       #d8352a;
 
 // KU gradients
 
