--- a/less/ku-social-boxtop.less
+++ b/less/ku-social-boxtop.less
@@ -1,6 +1,7 @@
 // KU Bokstoppe til sociale integrationer
 
 .social-embed {
+  background-color: @white-color;
   padding-bottom: 5px;
   &:before {
     .icon;
